# LogonRenderer

./: .gitignore  CMakeLists.txt  CornellBox-Empty-CO.mtl  CornellBox-Original.mtl  Makefile  README.md  bbox.cpp  bbox.d  bbox.h  buffer.cpp  buffer.d  buffer.h  bvh.cpp  bvh.d  bvh.h  depth_of_field_camera.cpp  depth_of_field_camera.h  diffuse.cpp  diffuse.d  diffuse.h  generic_material.cpp  generic_material.d  generic_material.h  ignore.gitignore  intersection_record.h  light_source.cpp  light_source.d  light_source.h  main.cpp  main.d  main.h  material.cpp  material.d  material.h  mirror.cpp  mirror.d  mirror.h  object.cpp  object.d  object.h  (+31 more)
cmake/: FindASSIMP.cmake  FindGLM.cmake
code/: acceleration_structure.h  bbox.cpp  bbox.h  buffer.cpp  buffer.h  bvh.cpp  bvh.h  camera.cpp  depth_of_field_camera.cpp  depth_of_field_camera.h  diffuse.cpp  generic_material.cpp  light_source.cpp  main.cpp  mirror.cpp  object.cpp  object.h  octree.cpp  octree.h  orthographic_camera.cpp  pathtracer.cpp  pathtracer.h  pinhole_camera.cpp  primitive.cpp  primitive.h  rough_conductor.cpp  rough_conductor.h  scene.cpp  scene.h  smooth_dieletric.cpp  sphere.cpp  sphere.h  transformations.h  triangle.cpp  triangle.h
contrib/glm/0.9.9.0/lib/pkgconfig/: glm.pc
contrib/imagemagick/7.0.8-3/: INSTALL_RECEIPT.json
contrib/imagemagick/7.0.8-3/lib/: libMagick++-7.Q16HDRI.la  libMagickCore-7.Q16HDRI.dylib  libMagickWand-7.Q16HDRI.dylib  libMagickWand-7.Q16HDRI.la
contrib/imagemagick/7.0.8-3/share/man/man1/: composite.1  (+5 more)
contrib/imagemagick/MagickCore/: version.h
headers/: buffer.h  intersection_record.h  main.h
headers/camera/: pinhole_camera.h
headers/materials/: diffuse.h  generic_material.h  light_source.h  material.h  mirror.h  smooth_dieletric.h
headers/primitives/: primitive.h  triangle.h
lib/: libMagick++-7.Q16HDRI.dylib
libs/assimp/4.1.0/: INSTALL_RECEIPT.json
libs/glm/0.9.9.0/: INSTALL_RECEIPT.json
libs/imagemagick/7.0.8-3/lib/: libMagickCore-7.Q16HDRI.la
libs/imagemagick/7.0.8-3/lib/pkgconfig/: ImageMagick-7.Q16HDRI.pc  Magick++.pc  MagickCore.pc  MagickWand.pc
src/: buffer.cpp  bvh.cpp  main.cpp  pathtracer.cpp  scene.cpp  transformations.cpp
src/camera/: depth_of_field_camera.cpp
src/materials/: generic_material.cpp  light_source.cpp  material.cpp  mirror.cpp  rough_conductor.cpp  smooth_dieletric.cpp
src/primitives/: primitive.cpp
(+126 files in other folders)
